[gd_scene load_steps=6 format=1]

[ext_resource path="res://assets/levels/Level24.gd" type="Script" id=1]
[ext_resource path="res://assets/levels_assets/defaultenvironment.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/objects/crate.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/objects/Cannon.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/objects/ImmoveableCrate.tscn" type="PackedScene" id=5]

[node name="Level24" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )

[node name="defaultenviroment" parent="." instance=ExtResource( 2 )]

[node name="Crate1" parent="." instance=ExtResource( 3 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -14.329, 1.30225, -3.46566 )

[node name="Crate2" parent="." instance=ExtResource( 3 )]

transform/local = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -1.43615, 1.30225, 3.30339 )

[node name="Crate4" parent="." instance=ExtResource( 3 )]

transform/local = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, -1.2687, 1.30225, -13.2025 )

[node name="Crate3" parent="." instance=ExtResource( 3 )]

transform/local = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -1.43615, 1.30225, 12.1027 )

[node name="Cannon" parent="." instance=ExtResource( 4 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.8601, 4.59228, -13.7429 )

[node name="ImmoveableCrate" parent="." instance=ExtResource( 5 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.6397, 1.17751, -13.8398 )

[node name="ImmoveableCrate1" parent="." instance=ExtResource( 5 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.6397, 1.17751, -9.9372 )

[node name="ImmoveableCrate 2" parent="." instance=ExtResource( 5 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -11.019, 0.124874, 0 )

[node name="ImmoveableCrate3" parent="." instance=ExtResource( 5 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.48, 6.02301, 7.25959 )

[node name="Crate" parent="." instance=ExtResource( 3 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.47791, 1.24694, 3.66656 )


